atualização do código para cronometroV3

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">  
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
-  <style>
+  <!--
+<style>
     /* overlay que cobre a tela e pisca em vermelho */
     #flash {
       position: fixed;
@@ -30,6 +30,7 @@
       animation: piscarVermelho 0.8s linear infinite;
     }
   </style>
+-->
 </head>
 <body style="font-size: 100%;">
 
@@ -37,11 +38,10 @@
 <div id="flash"></div>
 
 <div class="container-fluid mt-3" style="font-size: 18.5em;">
-  <h1></h1>
   <div class="row">    
     <div class="col p-6 text-end" id="min" style="padding-right: 0!important;">00: </div>
     <div class="col p-6" id="seg" style="padding-left: 0!important;">00</div>
- </div>
+  </div>
 </div>
 
 <div class="container-fluid">
@@ -53,6 +53,7 @@
       <button onclick="setSecondsFunction(30)" class="btn btn-lg btn-primary botao-tempo">+ 30 segundos</button>
     </div>
   </div>
+
   <div class="row">    
     <div class="col p-3 text-center" style="padding-left: 0!important; padding-right: 70px!important;">
       <button onclick="setSecondsFunction(-300)" class="btn btn-lg btn-warning botao-tempo">- 5 minutos</button>
@@ -61,11 +62,14 @@
       <button onclick="setSecondsFunction(-30)" class="btn btn-lg btn-warning botao-tempo">- 30 segundos</button>
     </div>
   </div>
+
   <div class="row">    
     <div class="col p-3 text-end"><button onclick="stopFunction()" class="btn btn-lg btn-danger botao-tempo"> Parar</button></div>
     <div class="col p-3" style="padding-left: 0!important; padding-right: 85px!important;">
       <button onclick="pauseFunction(0)" id="pause" class="btn btn-lg btn-info botao-controle"> Pausar</button>
       <button onclick="pauseFunction(1)" id="continue" style="display: none" class="btn btn-lg btn-info botao-controle"> Continue</button>
+      <!-- botão de teste de som -->
+      <button onclick="ensureAudio(); beep(250, 900, 0.25)" class="btn btn-lg btn-secondary">Testar som</button>
     </div>
   </div>
 </div>
@@ -76,7 +80,54 @@ var minutes = 0;
 var myVar;
 var pausado = 0;
 
+
+
+// áudio
+var audioCtx = null;
+
+// cria/retoma o AudioContext na primeira interação do usuário
+function ensureAudio() {
+  if (!audioCtx) {
+    audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+  }
+  if (audioCtx.state === 'suspended') {
+    // tenta retomar (muitos navegadores exigem interação do usuário)
+    audioCtx.resume().catch(function(e){
+      console.log("Audio resume failed:", e);
+    });
+  }
+}
+
+// função beep reutilizável com envelope para evitar estalos
+function beep(duration = 200, frequency = 1000, volume = 0.2) {
+  if (!audioCtx) return; // não inicializado (chame ensureAudio() por uma interação)
+  try {
+    const now = audioCtx.currentTime;
+    const oscillator = audioCtx.createOscillator();
+    const gainNode = audioCtx.createGain();
+
+    oscillator.type = 'sine';
+    oscillator.frequency.setValueAtTime(frequency, now);
+
+    // envelope rápido: ataque 10ms, decaimento até o fim
+    gainNode.gain.setValueAtTime(0.0, now);
+    gainNode.gain.linearRampToValueAtTime(volume, now + 0.01);
+    gainNode.gain.linearRampToValueAtTime(0.0, now + duration / 1000);
+
+    oscillator.connect(gainNode);
+    gainNode.connect(audioCtx.destination);
+
+    oscillator.start(now);
+    oscillator.stop(now + duration / 1000 + 0.02);
+  } catch (err) {
+    console.error("Erro ao tocar beep:", err);
+  }
+}
+
 function setSecondsFunction(sec){
+  // garante que o áudio foi autorizado por uma interação do usuário
+  ensureAudio();
+
   if ((sec < 0) && (minutes > 0)){
       seconds += minutes * 60;
       minutes = 0;
@@ -87,17 +138,16 @@ function setSecondsFunction(sec){
   console.log("seconds (total):", seconds);
   clearInterval(myVar);
   myVar = setInterval(myTimer, 1000);
-  // dispara imediatamente uma vez para atualizar a UI sem esperar 1s
+  // atualiza UI imediatamente
   myTimer();
 }
 
 function myTimer() {
-
   if (seconds >= 60){
     minutes += Math.floor(seconds/60);
     seconds = Math.round((seconds/60 - Math.floor(seconds/60))*60);    
   }
-  
+
   if (minutes < 10){
     document.getElementById("min").innerHTML = "0" + minutes + ": ";
   }else{
@@ -119,14 +169,15 @@ function myTimer() {
     return;
   }
 
-  // se faltar menos de 10 segundos → adiciona classe que ativa o overlay
-  if (minutes === 0 && seconds < 10 && seconds >= 0){
+  // menos de 10 segundos → piscar + beep (só se NÃO estiver pausado)
+  if (minutes === 0 && seconds < 10 && seconds >= 0 && pausado === 0){
     document.body.classList.add("alerta");
+    // toca o beep — já garantimos ensureAudio() na interação inicial
+    beep(220, 1000, 0.22);
   } else {
     document.body.classList.remove("alerta");
   }
 
-  // decrementa só se não estiver pausado
   if (pausado == 0){
       seconds -= 1;
   }    
@@ -159,7 +210,7 @@ function pauseFunction(valor) {
 
     switch (valor){
       case 0:
-        // Pausar: remove o piscar se estiver ativo
+        // Pausar: remove o piscar
         console.log("Pause");
         document.getElementById("continue").style.display = "inline-block";
         document.getElementById("pause").style.display = "none";
@@ -167,12 +218,12 @@ function pauseFunction(valor) {
         document.body.classList.remove("alerta");
         break;
       case 1:
-        // Continuar
+        // Continuar (o clique do usuário aqui também conta como interação)
         console.log("Continue");
         document.getElementById("continue").style.display = "none";
         document.getElementById("pause").style.display = "inline-block";
         pausado = 0;
-        setSecondsFunction(0); // reinicia intervalo
+        setSecondsFunction(0); // reinicia intervalo (e chama ensureAudio())
         break;  
     }
   }  
@@ -181,3 +232,4 @@ function pauseFunction(valor) {
 
 </body>
 </html>
+
