--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!--
-<style>
-    /* overlay que cobre a tela e pisca em vermelho */
+  <style>
     #flash {
       position: fixed;
       inset: 0;
@@ -17,60 +15,48 @@
       pointer-events: none;
       z-index: 9999;
     }
-
-    /* animação de piscar: opacidade sobe e desce */
     @keyframes piscarVermelho {
       0%   { opacity: 0; }
       50%  { opacity: 0.6; }
       100% { opacity: 0; }
     }
-
-    /* quando o body recebe a classe alerta, o overlay anima */
     body.alerta #flash {
       animation: piscarVermelho 0.8s linear infinite;
     }
   </style>
--->
 </head>
 <body style="font-size: 100%;">
 
-<!-- overlay para o piscar -->
 <div id="flash"></div>
 
-<div class="container-fluid mt-3" style="font-size: 18.5em;">
-  <div class="row">    
-    <div class="col p-6 text-end" id="min" style="padding-right: 0!important;">00: </div>
-    <div class="col p-6" id="seg" style="padding-left: 0!important;">00</div>
-  </div>
+<!-- cronômetro -->
+<div class="container-fluid mt-3 text-center" style="font-size: 18.5em;">
+  <span id="min">00:</span><span id="seg">00</span>
 </div>
 
-<div class="container-fluid">
-  <div class="row">    
-    <div class="col p-3 text-center" style="padding-left: 0!important; padding-right: 70px!important;">
-      <button onclick="setSecondsFunction(300)" class="btn btn-lg btn-primary botao-tempo">+ 5 minutos</button>
-      <button onclick="setSecondsFunction(180)" class="btn btn-lg btn-primary botao-tempo">+ 3 minutos</button>
-      <button onclick="setSecondsFunction(60)" class="btn btn-lg btn-primary botao-tempo">+ 1 minuto</button>
-      <button onclick="setSecondsFunction(30)" class="btn btn-lg btn-primary botao-tempo">+ 30 segundos</button>
-    </div>
+<div class="container my-4">
+  <!-- Botões de adicionar tempo -->
+  <div class="d-flex justify-content-center flex-wrap gap-2 mb-3">
+    <button onclick="setSecondsFunction(300)" class="btn btn-lg btn-primary">+ 5 minutos</button>
+    <button onclick="setSecondsFunction(180)" class="btn btn-lg btn-primary">+ 3 minutos</button>
+    <button onclick="setSecondsFunction(60)" class="btn btn-lg btn-primary">+ 1 minuto</button>
+    <button onclick="setSecondsFunction(30)" class="btn btn-lg btn-primary">+ 30 segundos</button>
   </div>
 
-  <div class="row">    
-    <div class="col p-3 text-center" style="padding-left: 0!important; padding-right: 70px!important;">
-      <button onclick="setSecondsFunction(-300)" class="btn btn-lg btn-warning botao-tempo">- 5 minutos</button>
-      <button onclick="setSecondsFunction(-180)" class="btn btn-lg btn-warning botao-tempo">- 3 minutos</button>
-      <button onclick="setSecondsFunction(-60)" class="btn btn-lg btn-warning botao-tempo">- 1 minuto</button>
-      <button onclick="setSecondsFunction(-30)" class="btn btn-lg btn-warning botao-tempo">- 30 segundos</button>
-    </div>
+  <!-- Botões de remover tempo -->
+  <div class="d-flex justify-content-center flex-wrap gap-2 mb-4">
+    <button onclick="setSecondsFunction(-300)" class="btn btn-lg btn-warning">- 5 minutos</button>
+    <button onclick="setSecondsFunction(-180)" class="btn btn-lg btn-warning">- 3 minutos</button>
+    <button onclick="setSecondsFunction(-60)" class="btn btn-lg btn-warning">- 1 minuto</button>
+    <button onclick="setSecondsFunction(-30)" class="btn btn-lg btn-warning">- 30 segundos</button>
   </div>
 
-  <div class="row">    
-    <div class="col p-3 text-end"><button onclick="stopFunction()" class="btn btn-lg btn-danger botao-tempo"> Parar</button></div>
-    <div class="col p-3" style="padding-left: 0!important; padding-right: 85px!important;">
-      <button onclick="pauseFunction(0)" id="pause" class="btn btn-lg btn-info botao-controle"> Pausar</button>
-      <button onclick="pauseFunction(1)" id="continue" style="display: none" class="btn btn-lg btn-info botao-controle"> Continue</button>
-      <!-- botão de teste de som -->
-      <button onclick="ensureAudio(); beep(250, 900, 0.25)" class="btn btn-lg btn-secondary">Testar som</button>
-    </div>
+  <!-- Botões de controle (centralizados lado a lado) -->
+  <div class="d-flex justify-content-center gap-3">
+    <button onclick="stopFunction()" class="btn btn-lg btn-danger">Parar</button>
+    <button onclick="pauseFunction(0)" id="pause" class="btn btn-lg btn-info">Pausar</button>
+    <button onclick="pauseFunction(1)" id="continue" style="display:none" class="btn btn-lg btn-info">Continue</button>
+    <button onclick="ensureAudio(); beep(300, 1000, 0.3)" class="btn btn-lg btn-secondary">Testar som</button>
   </div>
 </div>
 
@@ -80,27 +66,21 @@ var minutes = 0;
 var myVar;
 var pausado = 0;
 
-
-
-// áudio
 var audioCtx = null;
+var beepCount = 0;
+var lastBeepSecond = null;
 
-// cria/retoma o AudioContext na primeira interação do usuário
 function ensureAudio() {
   if (!audioCtx) {
     audioCtx = new (window.AudioContext || window.webkitAudioContext)();
   }
   if (audioCtx.state === 'suspended') {
-    // tenta retomar (muitos navegadores exigem interação do usuário)
-    audioCtx.resume().catch(function(e){
-      console.log("Audio resume failed:", e);
-    });
+    audioCtx.resume().catch(e => console.log("Audio resume failed:", e));
   }
 }
 
-// função beep reutilizável com envelope para evitar estalos
 function beep(duration = 200, frequency = 1000, volume = 0.2) {
-  if (!audioCtx) return; // não inicializado (chame ensureAudio() por uma interação)
+  if (!audioCtx) return;
   try {
     const now = audioCtx.currentTime;
     const oscillator = audioCtx.createOscillator();
@@ -109,7 +89,6 @@ function beep(duration = 200, frequency = 1000, volume = 0.2) {
     oscillator.type = 'sine';
     oscillator.frequency.setValueAtTime(frequency, now);
 
-    // envelope rápido: ataque 10ms, decaimento até o fim
     gainNode.gain.setValueAtTime(0.0, now);
     gainNode.gain.linearRampToValueAtTime(volume, now + 0.01);
     gainNode.gain.linearRampToValueAtTime(0.0, now + duration / 1000);
@@ -125,20 +104,20 @@ function beep(duration = 200, frequency = 1000, volume = 0.2) {
 }
 
 function setSecondsFunction(sec){
-  // garante que o áudio foi autorizado por uma interação do usuário
   ensureAudio();
-
   if ((sec < 0) && (minutes > 0)){
       seconds += minutes * 60;
       minutes = 0;
       seconds += sec;
-  }else{
+  } else {
     seconds += sec;  
   }  
-  console.log("seconds (total):", seconds);
+
+  beepCount = 0;
+  lastBeepSecond = null;s
+
   clearInterval(myVar);
   myVar = setInterval(myTimer, 1000);
-  // atualiza UI imediatamente
   myTimer();
 }
 
@@ -148,17 +127,8 @@ function myTimer() {
     seconds = Math.round((seconds/60 - Math.floor(seconds/60))*60);    
   }
 
-  if (minutes < 10){
-    document.getElementById("min").innerHTML = "0" + minutes + ": ";
-  }else{
-    document.getElementById("min").innerHTML = minutes + ": ";
-  }
-
-  if (seconds < 10){
-    document.getElementById("seg").innerHTML = " 0" + seconds;
-  }else{
-    document.getElementById("seg").innerHTML = seconds;
-  }
+  document.getElementById("min").innerHTML = (minutes < 10 ? "0" : "") + minutes + ":";
+  document.getElementById("seg").innerHTML = (seconds < 10 ? "0" : "") + seconds;
 
   if (minutes > 0 && seconds == 0){
     minutes--;
@@ -169,17 +139,24 @@ function myTimer() {
     return;
   }
 
-  // menos de 10 segundos → piscar + beep (só se NÃO estiver pausado)
-  if (minutes === 0 && seconds < 10 && seconds >= 0 && pausado === 0){
+  // piscar a partir dos 10 segundos
+  if (minutes === 0 && seconds <= 10 && seconds >= 0){
     document.body.classList.add("alerta");
-    // toca o beep — já garantimos ensureAudio() na interação inicial
-    beep(220, 1000, 0.22);
   } else {
     document.body.classList.remove("alerta");
   }
 
+  // beep apenas em 3,2,1
+  if (minutes === 0 && seconds >= 1 && seconds <= 3 && pausado === 0) {
+    if (lastBeepSecond !== seconds && beepCount < 3) {
+      beep(250, 1000, 0.3);
+      beepCount++;
+      lastBeepSecond = seconds;
+    }
+  }
+
   if (pausado == 0){
-      seconds -= 1;
+    seconds -= 1;
   }    
 }
 
@@ -191,39 +168,22 @@ function stopFunction() {
 function pauseFunction(valor) {  
   if (!(minutes == 0 && seconds == 0)){
     clearInterval(myVar);
-    if (seconds >= 60){
-      minutes += Math.floor(seconds/60);
-      seconds = Math.round((seconds/60 - Math.floor(seconds/60))*60);    
-    }
 
-    if (minutes < 10){
-      document.getElementById("min").innerHTML = "0" + minutes + ": ";
-    }else{
-      document.getElementById("min").innerHTML = minutes + ": ";
-    }
-
-    if (seconds < 10){
-      document.getElementById("seg").innerHTML = " 0" + seconds;
-    }else{
-      document.getElementById("seg").innerHTML = seconds;
-    }
+    document.getElementById("min").innerHTML = (minutes < 10 ? "0" : "") + minutes + ":";
+    document.getElementById("seg").innerHTML = (seconds < 10 ? "0" : "") + seconds;
 
     switch (valor){
       case 0:
-        // Pausar: remove o piscar
-        console.log("Pause");
         document.getElementById("continue").style.display = "inline-block";
         document.getElementById("pause").style.display = "none";
         pausado = 1;
         document.body.classList.remove("alerta");
         break;
       case 1:
-        // Continuar (o clique do usuário aqui também conta como interação)
-        console.log("Continue");
         document.getElementById("continue").style.display = "none";
         document.getElementById("pause").style.display = "inline-block";
         pausado = 0;
-        setSecondsFunction(0); // reinicia intervalo (e chama ensureAudio())
+        setSecondsFunction(0);
         break;  
     }
   }  
@@ -232,4 +192,3 @@ function pauseFunction(valor) {
 
 </body>
 </html>
-
