--- a/index.html
+++ b/index.html
@@ -1,194 +1,50 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">  
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+// Arquivo: Agenda.jsx (componente React)
 
-  <style>
-    #flash {
-      position: fixed;
-      inset: 0;
-      background: red;
-      opacity: 0;
-      pointer-events: none;
-      z-index: 9999;
+import React, { useState, useEffect } from 'react';
+import axios from 'axios';
+import io from 'socket.io-client';
+
+const socket = io('http://localhost:3000');
+
+function Agenda() {
+  const [agendamentos, setAgendamentos] = useState([]);
+  const usuarioId = 'ID_DO_USUARIO_LOGADO'; // ID do usuário logado (paciente, médico, etc.)
+
+  // Função para buscar agendamentos
+  const buscarAgendamentos = async () => {
+    try {
+      const response = await axios.get(`http://localhost:3000/api/agenda/${usuarioId}`);
+      setAgendamentos(response.data);
+    } catch (error) {
+      console.error('Erro ao buscar agendamentos:', error);
     }
-    @keyframes piscarVermelho {
-      0%   { opacity: 0; }
-      50%  { opacity: 0.6; }
-      100% { opacity: 0; }
-    }
-    body.alerta #flash {
-      animation: piscarVermelho 0.8s linear infinite;
-    }
-  </style>
-</head>
-<body style="font-size: 100%;">
+  };
 
-<div id="flash"></div>
+  useEffect(() => {
+    buscarAgendamentos();
 
-<!-- cronômetro -->
-<div class="container-fluid mt-3 text-center" style="font-size: 18.5em;">
-  <span id="min">00:</span><span id="seg">00</span>
-</div>
+    // Ouvinte para novos agendamentos via WebSocket
+    socket.on('novoAgendamento', (data) => {
+      console.log('Alerta de novo agendamento:', data.mensagem);
+      buscarAgendamentos(); // Atualiza a lista de agendamentos
+    });
 
-<div class="container my-4">
-  <!-- Botões de adicionar tempo -->
-  <div class="d-flex justify-content-center flex-wrap gap-2 mb-3">
-    <button onclick="setSecondsFunction(300)" class="btn btn-lg btn-primary">+ 5 minutos</button>
-    <button onclick="setSecondsFunction(180)" class="btn btn-lg btn-primary">+ 3 minutos</button>
-    <button onclick="setSecondsFunction(60)" class="btn btn-lg btn-primary">+ 1 minuto</button>
-    <button onclick="setSecondsFunction(30)" class="btn btn-lg btn-primary">+ 30 segundos</button>
-  </div>
+    // Limpeza do ouvinte ao desmontar o componente
+    return () => socket.off('novoAgendamento');
+  }, []);
 
-  <!-- Botões de remover tempo -->
-  <div class="d-flex justify-content-center flex-wrap gap-2 mb-4">
-    <button onclick="setSecondsFunction(-300)" class="btn btn-lg btn-warning">- 5 minutos</button>
-    <button onclick="setSecondsFunction(-180)" class="btn btn-lg btn-warning">- 3 minutos</button>
-    <button onclick="setSecondsFunction(-60)" class="btn btn-lg btn-warning">- 1 minuto</button>
-    <button onclick="setSecondsFunction(-30)" class="btn btn-lg btn-warning">- 30 segundos</button>
-  </div>
-
-  <!-- Botões de controle (centralizados lado a lado) -->
-  <div class="d-flex justify-content-center gap-3">
-    <button onclick="stopFunction()" class="btn btn-lg btn-danger">Parar</button>
-    <button onclick="pauseFunction(0)" id="pause" class="btn btn-lg btn-info">Pausar</button>
-    <button onclick="pauseFunction(1)" id="continue" style="display:none" class="btn btn-lg btn-info">Continue</button>
-    <button onclick="ensureAudio(); beep(300, 1000, 0.3)" class="btn btn-lg btn-secondary">Testar som</button>
-  </div>
-</div>
-
-<script>
-var seconds = 0;
-var minutes = 0;
-var myVar;
-var pausado = 0;
-
-var audioCtx = null;
-var beepCount = 0;
-var lastBeepSecond = null;
-
-function ensureAudio() {
-  if (!audioCtx) {
-    audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-  }
-  if (audioCtx.state === 'suspended') {
-    audioCtx.resume().catch(e => console.log("Audio resume failed:", e));
-  }
+  return (
+    <div>
+      <h2>Minha Agenda</h2>
+      <ul>
+        {agendamentos.map(ag => (
+          <li key={ag.id}>
+            {ag.data} - {ag.descricao}
+          </li>
+        ))}
+      </ul>
+    </div>
+  );
 }
 
-function beep(duration = 200, frequency = 1000, volume = 0.2) {
-  if (!audioCtx) return;
-  try {
-    const now = audioCtx.currentTime;
-    const oscillator = audioCtx.createOscillator();
-    const gainNode = audioCtx.createGain();
-
-    oscillator.type = 'sine';
-    oscillator.frequency.setValueAtTime(frequency, now);
-
-    gainNode.gain.setValueAtTime(0.0, now);
-    gainNode.gain.linearRampToValueAtTime(volume, now + 0.01);
-    gainNode.gain.linearRampToValueAtTime(0.0, now + duration / 1000);
-
-    oscillator.connect(gainNode);
-    gainNode.connect(audioCtx.destination);
-
-    oscillator.start(now);
-    oscillator.stop(now + duration / 1000 + 0.02);
-  } catch (err) {
-    console.error("Erro ao tocar beep:", err);
-  }
-}
-
-function setSecondsFunction(sec){
-  ensureAudio();
-  if ((sec < 0) && (minutes > 0)){
-      seconds += minutes * 60;
-      minutes = 0;
-      seconds += sec;
-  } else {
-    seconds += sec;  
-  }  
-
-  beepCount = 0;
-  lastBeepSecond = null;s
-
-  clearInterval(myVar);
-  myVar = setInterval(myTimer, 1000);
-  myTimer();
-}
-
-function myTimer() {
-  if (seconds >= 60){
-    minutes += Math.floor(seconds/60);
-    seconds = Math.round((seconds/60 - Math.floor(seconds/60))*60);    
-  }
-
-  document.getElementById("min").innerHTML = (minutes < 10 ? "0" : "") + minutes + ":";
-  document.getElementById("seg").innerHTML = (seconds < 10 ? "0" : "") + seconds;
-
-  if (minutes > 0 && seconds == 0){
-    minutes--;
-    seconds = 60;
-  }
-  if ((minutes == 0 && seconds <= 0) || seconds < 0){
-    stopFunction();
-    return;
-  }
-
-  // piscar a partir dos 10 segundos
-  if (minutes === 0 && seconds <= 10 && seconds >= 0){
-    document.body.classList.add("alerta");
-  } else {
-    document.body.classList.remove("alerta");
-  }
-
-  // beep apenas em 3,2,1
-  if (minutes === 0 && seconds >= 1 && seconds <= 3 && pausado === 0) {
-    if (lastBeepSecond !== seconds && beepCount < 3) {
-      beep(250, 1000, 0.3);
-      beepCount++;
-      lastBeepSecond = seconds;
-    }
-  }
-
-  if (pausado == 0){
-    seconds -= 1;
-  }    
-}
-
-function stopFunction() {
-  clearInterval(myVar);  
-  document.location.reload(true);  
-}
-
-function pauseFunction(valor) {  
-  if (!(minutes == 0 && seconds == 0)){
-    clearInterval(myVar);
-
-    document.getElementById("min").innerHTML = (minutes < 10 ? "0" : "") + minutes + ":";
-    document.getElementById("seg").innerHTML = (seconds < 10 ? "0" : "") + seconds;
-
-    switch (valor){
-      case 0:
-        document.getElementById("continue").style.display = "inline-block";
-        document.getElementById("pause").style.display = "none";
-        pausado = 1;
-        document.body.classList.remove("alerta");
-        break;
-      case 1:
-        document.getElementById("continue").style.display = "none";
-        document.getElementById("pause").style.display = "inline-block";
-        pausado = 0;
-        setSecondsFunction(0);
-        break;  
-    }
-  }  
-}
-</script>
-
-</body>
-</html>
+export default Agenda;
